[package]
name = "ustats"
version = "0.1.0"
edition = "2021"

[lib]
name = "ustats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
